# hermes-home-assistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config_help.yml  feature_request.yml
.github/workflows/: ci.yml
custom_components/hermes_assistant/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  conversation.py  event.py  manifest.json  sensor.py
custom_components/hermes_assistant/www/: hermes-chat-card.js
docs/api/: hermes-api.postman_collection.json  openapi.yaml
tests/: conftest.py  test_api.py  test_config_flow.py  test_conversation.py  test_init.py  test_sensor.py
